sourcery-macros/tests/ui/fail/projection_on_enum.stderr
error: Unsupported shape `enum`. Expected struct with named fields, unnamed fields, or no fields.
  --> tests/ui/fail/projection_on_enum.rs:10:10
   |
10 | #[derive(Projection)]
   |          ^^^^^^^^^^
   |
   = note: this error originates in the derive macro `Projection` (in Nightly builds, run with -Z macro-backtrace for more info)
